--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
     <section class="galeria">
         <article class="galeria-hijos">
             <a href="/pages/hombre.html">
-                <img src="/assets/hombre.jpg" alt="">
+                <img src="./assets/hombre.jpg" alt="">
                 <h2>Hombre</h2>
             </a>
         </article>
         <article class="galeria-hijos">
             <a href="/pages/mujer.html">
-                <img src="/assets/mujer.jpg" alt="">
+                <img src="./assets/mujer.jpg" alt="">
                 <h2>Mujer</h2>
             </a>
         </article>
         <article class="galeria-hijos">
             <a href="/pages/niños.html">
-                <img src="/assets/niños.avif" alt="">
+                <img src="./assets/niños.avif" alt="">
                 <h2>Niños</h2>
             </a>
         </article>
