--- a/index.html
+++ b/index.html
@@ -72,16 +72,20 @@
     </section>
 
     <!--PRODUCTO DESTACADO-->
-    <section class="prod_dest">
+    <section id="prodest-index" class="prod_dest">
         <h2>PRODUCTO DESTACADO</h2>
-        <a href="#">COMPRAR AHORA</a>
+        <div class="boton">
+            <a href="#">COMPRAR AHORA</a>
+        </div>
+        
     </section>
 
     <!--PRODUCTO EN PROMOCIÓN-->
-    <section class="promo">
-        <img src="/assets/promo.webp" alt="">
+    <section id="promo-index" class="promo">
         <h2>PRODUCTO DESTACADO</h2>
-        <a href="#">¡APROVÉCHALO!</a>
+        <div class="boton">
+            <a href="#">¡APROVÉCHALO!</a>
+        </div>
     </section>
     
     <!--FOOTER-->
