--- a/pages/ninios.html
+++ b/pages/ninios.html
@@ -72,17 +72,20 @@
     </section>
 
     <!--PRODUCTO DESTACADO-->
-    <section class="prod_dest">
-        <img src="../assets/prod_dest_hombre.webp" alt="">
+    <section id="prodest-ninios" class="prod_dest">
         <h2>PRODUCTO DESTACADO</h2>
-        <a href="#">COMPRAR AHORA</a>
+        <div class="boton">
+            <a href="#">COMPRAR AHORA</a>
+        </div>
+        
     </section>
 
     <!--PRODUCTO EN PROMOCIÓN-->
-    <section class="promo">
-        <img src="../assets/promo_hombre.png" alt="">
+    <section id="promo-ninios" class="promo">
         <h2>PRODUCTO DESTACADO</h2>
-        <a href="#">¡APROVÉCHALO!</a>
+        <div class="boton">
+            <a href="#">¡APROVÉCHALO!</a>
+        </div>
     </section>
     
     <!--FOOTER-->
