--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -81,17 +81,19 @@
     </section>
 
     <!--PRODUCTO DESTACADO-->
-    <section class="prod_dest">
-        <img src="../assets/prod_dest_mujer.jpg" alt="">
+    <section id="prodest-mujer" class="prod_dest">
         <h2>PRODUCTO DESTACADO</h2>
-        <a href="#">COMPRAR AHORA</a>
+        <div class="boton">
+            <a href="#">COMPRAR AHORA</a>
+        </div>
     </section>
 
     <!--PRODUCTO EN PROMOCIÓN-->
-    <section class="promo">
-        <img src="../assets/promo_mujer.jpeg" alt="">
+    <section id="promo-mujer" class="promo">
         <h2>PRODUCTO DESTACADO</h2>
-        <a href="#">¡APROVÉCHALO!</a>
+        <div class="boton">
+            <a href="#">¡APROVÉCHALO!</a>
+        </div>
     </section>
     
 
