--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -62,19 +62,19 @@
     <section class="galeria">
         <article>
             <a href="#">
-            <img src="../assets/calzado_muejer.webp" alt="">
+            <img src="../assets/mujer/calzado_muejer.webp" alt="">
             <h2>Calzado</h2>
         </a>
         </article>
         <article>
             <a href="#">
-            <img src="../assets/Indumentaria_M.webp" alt="">
+            <img src="../assets/mujer/Indumentaria_M.webp" alt="">
             <h2>Indumentaria</h2>
             </a>
         </article>
         <article>
             <a href="#">
-            <img src="../assets/accesorios_mujer.jpg" alt="">
+            <img src="../assets/mujer/accesorios_mujer.jpg" alt="">
             <h2>Accesorios</h2>
             </a>
         </article>
