--- a/pages/ninios.html
+++ b/pages/ninios.html
@@ -53,19 +53,19 @@
     <section class="galeria">
         <article>
             <a href="#">
-            <img src="../assets/calzado_niño.png" alt="">
+            <img src="../assets/ninios/calzado_niño.png" alt="">
             <h2>Calzado</h2>
         </a>
     </article>
         <article>
             <a href="#">
-            <img src="../assets/indumentaria_N.webp" alt="">
+            <img src="../assets/ninios/indumentaria_N.webp" alt="">
             <h2>Indumentaria</h2>
             </a>
         </article>
         <article>
             <a href="#">
-            <img src="../assets/accesorios_ninios.avif" alt="">
+            <img src="../assets/ninios/accesorios_ninios.avif" alt="">
             <h2>Accesorios</h2>
             </a>
         </article>
@@ -73,7 +73,7 @@
 
     <!--PRODUCTO DESTACADO-->
     <section id="prodest-ninios" class="prod_dest">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Adidas Forum 84</h2>
         <div class="boton">
             <a href="#">COMPRAR AHORA</a>
         </div>
