--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -53,19 +53,19 @@
     <section class="galeria">
         <article>
             <a href="#">
-            <img src="../assets/calzado_hombre.jpg" alt="">
+            <img src="../assets/hombre/calzado_hombre.jpg" alt="">
             <h2>Calzado</h2>
         </a>
         </article>
         <article>
             <a href="#">
-            <img src="../assets/indumentaria_H.webp" alt="">
+            <img src="../assets/hombre/indumentaria_H.webp" alt="">
             <h2>Indumentaria</h2>
             </a>
         </article>
         <article>
             <a href="#">
-            <img src="../assets/accesorios_hombre.jpg" alt="">
+            <img src="../assets/hombre/accesorios_hombre.jpg" alt="">
             <h2>Accesorios</h2>
             </a>
         </article>
