--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!--PRODUCTO EN PROMOCIÓN-->
     <section id="promo-index" class="promo">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Predator Elite</h2>
         <div class="boton">
             <a href="#">¡APROVÉCHALO!</a>
         </div>
