--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -73,7 +73,7 @@
 
     <!--PRODUCTO DESTACADO-->
     <section id="prodest-hombre" class="prod_dest">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Adidas SL 72</h2>
         <div class="boton">
             <a href="#">COMPRAR AHORA</a>
         </div>
@@ -81,9 +81,9 @@
 
     <!--PRODUCTO EN PROMOCIÓN-->
     <section id="promo-hombre" class="promo">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Adidas Fast PrimeBlue</h2>
         <div class="boton">
-            <a href="#">¡APROVÉCHALO!</a>
+            <a href="#">VER MÁS</a>
         </div>
     </section>
     
