--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -82,7 +82,7 @@
 
     <!--PRODUCTO DESTACADO-->
     <section id="prodest-mujer" class="prod_dest">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Adidas SL 72</h2>
         <div class="boton">
             <a href="#">COMPRAR AHORA</a>
         </div>
@@ -90,7 +90,7 @@
 
     <!--PRODUCTO EN PROMOCIÓN-->
     <section id="promo-mujer" class="promo">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Conjuntos Femme</h2>
         <div class="boton">
             <a href="#">¡APROVÉCHALO!</a>
         </div>
