--- a/pages/ninios.html
+++ b/pages/ninios.html
@@ -73,16 +73,16 @@
 
     <!--PRODUCTO DESTACADO-->
     <section id="prodest-ninios" class="prod_dest">
-        <h2>Adidas Forum 84</h2>
+        <h2>¡Vacaciones MODE ON!</h2>
         <div class="boton">
-            <a href="#">COMPRAR AHORA</a>
+            <a href="#">DESCUBRE +</a>
         </div>
         
     </section>
 
     <!--PRODUCTO EN PROMOCIÓN-->
     <section id="promo-ninios" class="promo">
-        <h2>PRODUCTO DESTACADO</h2>
+        <h2>Child Ozweego Run</h2>
         <div class="boton">
             <a href="#">¡APROVÉCHALO!</a>
         </div>
