--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -51,19 +51,19 @@
 
     <!--GALERIA POR PERSONA-->
     <section class="galeria">
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/hombre/calzado_hombre.jpg" alt="">
             <h2>Calzado</h2>
         </a>
         </article>
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/hombre/indumentaria_H.webp" alt="">
             <h2>Indumentaria</h2>
             </a>
         </article>
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/hombre/accesorios_hombre.jpg" alt="">
             <h2>Accesorios</h2>
