--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -60,19 +60,19 @@
 
     <!-- GALERIA POR PERSONA -->
     <section class="galeria">
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/mujer/calzado_muejer.webp" alt="">
             <h2>Calzado</h2>
         </a>
         </article>
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/mujer/Indumentaria_M.webp" alt="">
             <h2>Indumentaria</h2>
             </a>
         </article>
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/mujer/accesorios_mujer.jpg" alt="">
             <h2>Accesorios</h2>
