--- a/pages/ninios.html
+++ b/pages/ninios.html
@@ -51,19 +51,19 @@
 
     <!--GALERIA POR PERSONA-->
     <section class="galeria">
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/ninios/calzado_niño.png" alt="">
             <h2>Calzado</h2>
         </a>
     </article>
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/ninios/indumentaria_N.webp" alt="">
             <h2>Indumentaria</h2>
             </a>
         </article>
-        <article>
+        <article class="galeria-hijos">
             <a href="#">
             <img src="../assets/ninios/accesorios_ninios.avif" alt="">
             <h2>Accesorios</h2>
